# weather_data_crawler

./: .env_dev  .gitignore  .pre-commit-config.yaml  README.md  app.py  aqi_reference_table.csv  historical_weather_config.py  models.py  open_weather_api.py  pyproject.toml  pytest.ini  requirements.txt
src/skystats/: __init__.py  historical_weather_config.py  models.py  skynow.py  skystats.py
tests/: mocked_aqi_page.html  mocked_weather_page.html  test_weather_crawl.py
