[build-system]
requires = ["setuptools==69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "skystats"
description = "Simplify getting historical and live weather data"

authors = [
    {name="Tom Ahoi", email="tom@example.com"}
]

license = {text = "MIT"}
requires-python = ">=3.9"
dependencies=[
"beautifulsoup4==4.12.2",
"pytest==8.2.2",
"python-dotenv==1.0.0",
"loguru==0.7.2",
"pydantic==2.7.3",
"requests-cache==1.2.0",
"retry-requests==2.0.0",
"openmeteo-requests==1.2.0",
]
keywords = ["weather", "historical weather", "live weather", "weather API", "data retrieval"]

version = "0.1.0"


[project.scripts]
skystats = "skystats.skystats:cli"
skynow = "skystats.skynow:weather_now"
